# nuitka-with-github-actions

./: compile-hello-world.yml  hello-world.py  pyproject.toml  use-pyqt5.py
.github/workflows/: compile-hello-world.yml  default-shell-cmd.yml  hellow-world.yml  pyqt5-windows-mingw64.yml  pyqt5-windows-mingw64.yml-  pyqt5-windows.yml  simple.yml  tmate-debug.yml-
